# celery-resource-autoscaler

./: pyproject.toml  setup.py  tox.ini
celery_resource_autoscaler/: autoscaler.py
celery_resource_autoscaler/limits/: cpu_limit.py  memory_limit.py
